# ask-genie-skill

./: README.md  __init__.py  pyproject.toml  requirements.txt
genie/: client.py  config.py
locale/en-us/: AskKeyword.voc  LaunchKeyword.voc  StopKeyword.voc  ask.dialog  launch.dialog  no.intent.dialog  stop.dialog  utterance.rx
tests/: test_client.py
